blog/20230507/k3s_traefik_auth/auth-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-svc
spec:
  type: ExternalName
  externalName: host.lima.internal
